# Projeto_ASE

./: .gitignore  PLANO_EXECUCAO.md  README.md
ASE_pdfs/: ASE_2025-26_Lab10_TFT.txt  ASE_2025-26_Lab1_GetStarted.txt  ASE_2025-26_Lab2_FreeRTOS.txt  ASE_2025-26_Lab3_BasicIO.txt  ASE_2025-26_Lab4_I2C-5.txt  ASE_2025-26_Lab5_DevDriver-3.txt  ASE_2025-26_Lab6_SPI.txt  ASE_2025-26_Lab7_LowPower-1.txt  ASE_2025-26_Lab8_WiFi.txt  ASE_2025-26_Lab9_MQTT.txt
access_monitor/: CMakeLists.txt  README.md  sdkconfig
access_monitor/components/st7735_driver/: idf_component.yml
access_monitor/components/st7735_driver/include/: st7735.h
access_monitor/components/st7735_driver/src/: st7735.c
access_monitor/dashboard/: docker-compose.yml
access_monitor/dashboard/bridge/: Dockerfile  bridge.py
access_monitor/dashboard/grafana/dashboards/: access-monitor.json
access_monitor/dashboard/grafana/provisioning/dashboards/: dashboards.yml
access_monitor/dashboard/prometheus/: prometheus.yml
access_monitor/main/: CMakeLists.txt  Kconfig.projbuild  access_control.c  access_control.h  display_ui.c  display_ui.h  door_led.c  door_led.h  idf_component.yml  main.c  mosquitto_org.crt  mqtt_app.c  mqtt_app.h  multisensor_dht20.c  multisensor_dht20.h  pir.c  pir.h  presence.c  presence.h  project_config.h  rfid.c  rfid.h  spi_bus_manager.c  spi_bus_manager.h  storage_log.c  storage_log.h
